--- a/user/pom.xml
+++ b/user/pom.xml
@@ -59,6 +59,16 @@
             <version>9.22.3</version>
         </dependency>
 
+        <!--    SPRING SECURITY    -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+            <version>3.1.5</version>
+        </dependency>
+
+
+
+
     </dependencies>
 
     <build>
