--- a/user/src/main/resources/application.properties
+++ b/user/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=update
+
+## Excluding Spring Security
+#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
